# meetily-gm

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  commitlint.config.mjs
.github/workflows/: ci.yml
docs/: shenava-models.md
docs/oauth/: SLACK-OAUTH-SETUP.md  slack-app-manifest.json  slack-callback.html
docs/product-plan/: 00-master-plan.md  01-rebrand-identity.md  02-analytics-and-updates.md  03-persian-language.md  04-participants-export.md  05-diarization-hardening.md  06-prompt-studio.md  07-jira-integration.md  08-slack-integration.md  09-meetings-page.md  10-connector-platform.md  11-feature-backlog.md  12-open-source-launch.md  13-app-redesign.md  14-claude-code-provider.md  15-extension-distribution-and-pairing.md  16-ai-native-strategy.md  17-engineering-playbook.md  18-acoustic-diarization.md  index.html
e2e-desktop/: wdio.conf.ts
e2e-desktop/specs/: launch.e2e.ts
extension/: .gitignore  manifest.json  offscreen.html  options.html  package-lock.json  package.json  playwright.config.ts  popup.html  tsconfig.json  vite.config.ts  vite.content.capture.config.ts  vite.content.meet.config.ts  vitest.config.ts  whisper-test.html
extension/e2e/: fixtures.ts  smoke.spec.ts
frontend/: next.config.js  package.json  tsconfig.json
frontend/scripts/: tauri-auto.js
frontend/src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
pairing-host/: Cargo.toml
pairing-host/src/: codec.rs  main.rs  pairing.rs
scripts/: check-file-length.mjs  generate-update-manifest-github.js  rollback-release.mjs
shenava-helper/: Cargo.toml
(+235 files in other folders)
