[package]
name = "pairing-host"
version = "0.1.0"
description = "Chrome native-messaging host that hands the gmeet ingest pairing (base URL + token) to the pinned Miting companion extension."
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "miting-pairing-host"
path = "src/main.rs"

[dependencies]
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
